--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@ input::placeholder, textarea::placeholder { color: var(--text-secondary); opacit
   }
 }
 </style>
-<script src="https://analytics.ahrefs.com/analytics.js" data-key="S5MONAzRHcGmXSoqcZ5ICA" async></script>
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
 </head>
 <body>
 <div id="loadingStatusBar">
